--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Ovarian Cancer Research</title>
 
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_index.css">
 </head>
 <body>
 <!-- Left Menu for Other Repositories -->
