--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="circulating-markers.html">Ovarianl Cancer - Circulating Markers</a></li>
+        <li><a href="circulating-markers.html">Ovarian Cancer - Circulating Markers</a></li>
         <li><a href="expression-profiles.html">Ovarian Cancer - Expression Profiles in Tissues</a></li>
         <li><a href="miscellaneous.html">Miscellaneous</a></li>
     </ul>
