--- a/Codes.html
+++ b/Codes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ovarian Cancer - Circulating Markers</title>
+    <title>Endometrial Cancer - Circulating Markers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,3 +25,4 @@
 
 </body>
 </html>
+
