--- a/Codes.html
+++ b/Codes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Endometrial Cancer - Circulating Markers</title>
+    <title>Ovarian Cancer - Circulating Markers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
 <div class="main-content">
     <!-- Back Button -->
-    <a href="https://wcrf.github.io/Endometrial-Cancer/index.html" class="back-button">Back to Main Page</a>
+    <a href="https://wcrf.github.io/Ovarian-Cancer/" class="back-button">Back to Main Page</a>
     <!-- More content here -->
 </div>
     
@@ -25,4 +25,3 @@
 
 </body>
 </html>
-
