--- a/Codes.html
+++ b/Codes.html
@@ -18,6 +18,11 @@
     
 <h>Embed all codes here</h>
 
+<h><RCodes for analyzing data from prospective studies/h>
+<a href="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497" target="_blank">View the R Script on Gist</a>
+
+<h><Python Codes for vizualizing data from prospective studies/h>
+
 <iframe src="https://nbviewer.org/github/WCRF/Ovarian-Cancer/blob/main/OvarianCancer_nested_cc_data_viz.ipynb" width="100%" height="800px"></iframe>
 
     
