--- a/Codes.html
+++ b/Codes.html
@@ -21,6 +21,11 @@
     </div>
 
     <div>
+        <h3>RCodes for analyzing data from Mendelian Randomization studies</h3>
+        <a href="https://gist.github.com/Mihiretukebede/54c034377f2c515e2ee0cd8c5b8be065" target="_blank">View the R Script for analyzing data from Mendelian Randomization Studies on Gist</a>
+    </div>
+
+    <div>
         <h3>Python Codes for visualizing data from prospective studies</h3>
         <iframe src="https://nbviewer.org/github/WCRF/Ovarian-Cancer/blob/main/OvarianCancer_nested_cc_data_viz.ipynb" width="100%" height="800px"></iframe>
     </div>
