--- a/Codes.html
+++ b/Codes.html
@@ -17,7 +17,7 @@
     
     <div>
         <h3>RCodes for analyzing data from prospective studies</h3>
-        <a href="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497" target="_blank">View the R Script on Gist</a>
+        <script src="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497"></script>
     </div>
 
     <div>
