--- a/Codes.html
+++ b/Codes.html
@@ -19,6 +19,8 @@
         <h3>RCodes for analyzing data from prospective studies</h3>
         <script src="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497"></script>
     </div>
+    <script src="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497.js"></script>
+
 
     <div>
         <h3>RCodes for analyzing data from Mendelian Randomization studies</h3>
