--- a/Codes.html
+++ b/Codes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Endometrial Cancer - Circulating Markers</title>
+    <title>Ovarian Cancer - Circulating Markers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <h2>Embed all codes here</h2>
 
     <div>
-        <h3>Python Codes for vizualizing data for the associations of pre-diagnostic biomarker levels with Ovarian Cancer in prospective studies</h3>
+        <h3>Python Codes for Visualizing Data for the Associations of pre-diagnostic biomarker Levels with Ovarian Cancer in Prospective Studies </h3>
         <iframe src="https://nbviewer.org/github/WCRF/Endometrial-Cancer/blob/main/ec_nested_cc_data_viz.ipynb" width="100%" height="800px"></iframe>
     </div>
     
