--- a/Codes.html
+++ b/Codes.html
@@ -7,39 +7,33 @@
 <body>
 
 <nav>
-    <!-- Navigation menu here -->
+<!-- Navigation menu here -->
 </nav>
 
 <div class="main-content">
     <!-- Back Button -->
-    <a href="https://wcrf.github.io/Endometrial-Cancer/index.html" class="back-button">Back to Main Page</a>
+    <a href="https://wcrf.github.io/Ovarian-Cancer/" class="back-button">Back to Main Page</a>
     <h2>Embed all codes here</h2>
 
     <div>
-        <h3>Python Codes for Visualizing Data for the Associations of pre-diagnostic biomarker Levels with Ovarian Cancer in Prospective Studies </h3>
-        <iframe src="https://nbviewer.org/github/WCRF/Endometrial-Cancer/blob/main/ec_nested_cc_data_viz.ipynb" width="100%" height="800px"></iframe>
+        <h3>Python Codes for visualizing data from prospective studies</h3>
+        <iframe src="https://nbviewer.org/github/WCRF/Ovarian-Cancer/blob/main/OvarianCancer_nested_cc_data_viz.ipynb" width="100%" height="800px"></iframe>
     </div>
     
     <div>
         <h3>RCodes for analyzing data from prospective studies</h3>
-        <script src="https://gist.github.com/Mihiretukebede/0819c6aff1cbfe1466f16f0b3c463282"></script>
+        <script src="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497"></script>
     </div>
+    <script src="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497.js"></script>
+
 
     <div>
-        <h3>Further R Codes for the analysis: combined with data from MR studies</h3>
-        <script src="https://gist.github.com/Mihiretukebede/e1c44c8dd48ee81ea2d06f4048b40c29"></script>
+        <h3>RCodes for analyzing data from Mendelian Randomization studies</h3>
+        <a href="https://gist.github.com/Mihiretukebede/54c034377f2c515e2ee0cd8c5b8be065" target="_blank">View the R Script for analyzing data from Mendelian Randomization Studies on Gist</a>
     </div>
+
     
-    <div>
-        <h3>Sensitivity analysis</h3>
-        <script src="https://gist.github.com/Mihiretukebede/6bb611a25033312ed80223de886f28b9"></script>
-    </div>
-
-    <div>
-        <h3>Code for analysis of the data for baseline pre-diagnostic biomarker levels</h3>
-        <script src="https://gist.github.com/Mihiretukebede/6bb611a25033312ed80223de886f28b9"></script>
-    </div>
-</div> <!-- Closing main-content div here -->
+</div>
 
 <footer>
     <!-- Footer content here -->
