--- a/Codes.html
+++ b/Codes.html
@@ -31,6 +31,7 @@
         <h3>RCodes for analyzing data from Mendelian Randomization studies</h3>
         <a href="https://gist.github.com/Mihiretukebede/54c034377f2c515e2ee0cd8c5b8be065" target="_blank">View the R Script for analyzing data from Mendelian Randomization Studies on Gist</a>
     </div>
+    <script src="https://gist.github.com/Mihiretukebede/54c034377f2c515e2ee0cd8c5b8be065.js"></script>
 
     
 </div>
