--- a/Codes.html
+++ b/Codes.html
@@ -22,19 +22,19 @@
     <h2>Embed all codes here</h2>
 
     <div>
-        <h3 id="python-codes>Python Codes for visualizing data from prospective studies</h3>
+        <h3 id="python-codes">Python Codes for visualizing data from prospective studies</h3>
         <iframe src="https://nbviewer.org/github/WCRF/Ovarian-Cancer/blob/main/OvarianCancer_nested_cc_data_viz.ipynb" width="100%" height="800px"></iframe>
     </div>
     
     <div>
-        <h3 id="r-codes-prospective>RCodes for analyzing data from prospective studies</h3>
+        <h3 id="r-codes-prospective">RCodes for analyzing data from prospective studies</h3>
         <script src="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497"></script>
     </div>
     <script src="https://gist.github.com/Mihiretukebede/36d0451c9db6d5e06509fde5c87af497.js"></script>
 
 
     <div>
-        <h3 id="r-codes-mr>RCodes for analyzing data from Mendelian Randomization studies</h3>
+        <h3 id="r-codes-mr">RCodes for analyzing data from Mendelian Randomization studies</h3>
         <a href="https://gist.github.com/Mihiretukebede/54c034377f2c515e2ee0cd8c5b8be065" target="_blank">View the R Script for analyzing data from Mendelian Randomization Studies on Gist</a>
     </div>
     <script src="https://gist.github.com/Mihiretukebede/54c034377f2c515e2ee0cd8c5b8be065.js"></script>
