--- a/Codes.html
+++ b/Codes.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<meta name="viewport" content="width=device-width, initial-scale=1"> #For mobile phone users
 
 <nav>
 <!-- Navigation menu here -->
